src/cmd/compile/internal/gc/y.output

state 0
	$accept: .file $end 
	$$4: .    (4)

	.  reduce 4 (src line 211)

	file  goto 1
	loadsys  goto 2
	$$4  goto 3

state 1
	$accept:  file.$end 

	$end  accept
	.  error


state 2
	file:  loadsys.package imports xdcl_list 
	package: .    (2)

	LPACKAGE  shift 5
	.  reduce 2 (src line 194)

	package  goto 4

state 3
	loadsys:  $$4.import_package import_there 

	LPACKAGE  shift 7
	.  error

	import_package  goto 6

state 4
	file:  loadsys package.imports xdcl_list 
	imports: .    (6)

	.  reduce 6 (src line 228)

	imports  goto 8

state 5
	package:  LPACKAGE.sym ';' 

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 9
	hidden_importsym  goto 11

state 6
	loadsys:  $$4 import_package.import_there 
	$$21: .    (21)

	.  reduce 21 (src line 335)

	import_there  goto 14
	$$21  goto 15

state 7
	import_package:  LPACKAGE.LNAME import_safety ';' 

	LNAME  shift 16
	.  error


state 8
	file:  loadsys package imports.xdcl_list 
	imports:  imports.import ';' 
	xdcl_list: .    (230)

	LIMPORT  shift 19
	.  reduce 230 (src line 1660)

	xdcl_list  goto 17
	import  goto 18

state 9
	package:  LPACKAGE sym.';' 

	';'  shift 20
	.  error


state 10
	sym:  LNAME.    (163)

	.  reduce 163 (src line 1229)


state 11
	sym:  hidden_importsym.    (164)

	.  reduce 164 (src line 1238)


state 12
	sym:  '?'.    (165)

	.  reduce 165 (src line 1239)


state 13
	hidden_importsym:  '@'.LLITERAL '.' LNAME 
	hidden_importsym:  '@'.LLITERAL '.' '?' 

	LLITERAL  shift 21
	.  error


state 14
	loadsys:  $$4 import_package import_there.    (5)

	.  reduce 5 (src line 222)


state 15
	import_there:  $$21.hidden_import_list '$' '$' 
	hidden_import_list: .    (357)

	.  reduce 357 (src line 2363)

	hidden_import_list  goto 22

state 16
	import_package:  LPACKAGE LNAME.import_safety ';' 
	import_safety: .    (19)

	LNAME  shift 24
	.  reduce 19 (src line 327)

	import_safety  goto 23

state 17
	file:  loadsys package imports xdcl_list.    (1)
	xdcl_list:  xdcl_list.xdcl ';' 
	xdcl: .    (23)

	$end  reduce 1 (src line 185)
	error  shift 29
	LLITERAL  shift 70
	LBREAK  shift 42
	LCHAN  shift 80
	LCONST  shift 48
	LCONTINUE  shift 43
	LDEFER  shift 45
	LFALL  shift 41
	LFOR  shift 51
	LFUNC  shift 33
	LGO  shift 44
	LGOTO  shift 46
	LIF  shift 55
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LRETURN  shift 47
	LSELECT  shift 53
	LSTRUCT  shift 84
	LSWITCH  shift 52
	LTYPE  shift 32
	LVAR  shift 30
	LDOSELECT  shift 54
	LCOMM  shift 67
	'+'  shift 62
	'-'  shift 63
	'^'  shift 66
	'*'  shift 60
	'&'  shift 61
	'('  shift 69
	';'  reduce 23 (src line 348)
	'!'  shift 64
	'~'  shift 65
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 58
	expr  goto 49
	fnliteral  goto 75
	for_stmt  goto 35
	if_stmt  goto 39
	non_dcl_stmt  goto 28
	labelname  goto 40
	name  goto 71
	new_name  goto 56
	pexpr  goto 59
	pexpr_no_paren  goto 68
	pseudocall  goto 72
	select_stmt  goto 37
	doselect_stmt  goto 38
	simple_stmt  goto 34
	switch_stmt  goto 36
	uexpr  goto 57
	xfndcl  goto 27
	xdcl  goto 25
	expr_list  goto 50
	common_dcl  goto 26
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	lconst  goto 31
	fnlitdcl  goto 78

state 18
	imports:  imports import.';' 

	';'  shift 86
	.  error


state 19
	import:  LIMPORT.import_stmt 
	import:  LIMPORT.'(' import_stmt_list osemi ')' 
	import:  LIMPORT.'(' ')' 

	LLITERAL  shift 90
	LNAME  shift 10
	'('  shift 88
	'.'  shift 92
	'?'  shift 12
	'@'  shift 13
	.  error

	import_here  goto 89
	sym  goto 91
	hidden_importsym  goto 11
	import_stmt  goto 87

state 20
	package:  LPACKAGE sym ';'.    (3)

	.  reduce 3 (src line 201)


state 21
	hidden_importsym:  '@' LLITERAL.'.' LNAME 
	hidden_importsym:  '@' LLITERAL.'.' '?' 

	'.'  shift 93
	.  error


state 22
	import_there:  $$21 hidden_import_list.'$' '$' 
	hidden_import_list:  hidden_import_list.hidden_import 

	LCONST  shift 98
	LFUNC  shift 100
	LIMPORT  shift 96
	LTYPE  shift 99
	LVAR  shift 97
	'$'  shift 94
	.  error

	hidden_import  goto 95

state 23
	import_package:  LPACKAGE LNAME import_safety.';' 

	';'  shift 101
	.  error


state 24
	import_safety:  LNAME.    (20)

	.  reduce 20 (src line 328)


state 25
	xdcl_list:  xdcl_list xdcl.';' 

	';'  shift 102
	.  error


state 26
	xdcl:  common_dcl.    (24)

	.  reduce 24 (src line 353)


state 27
	xdcl:  xfndcl.    (25)

	.  reduce 25 (src line 354)


state 28
	xdcl:  non_dcl_stmt.    (26)

	.  reduce 26 (src line 358)


state 29
	xdcl:  error.    (27)

	.  reduce 27 (src line 363)


state 30
	common_dcl:  LVAR.vardcl 
	common_dcl:  LVAR.'(' vardcl_list osemi ')' 
	common_dcl:  LVAR.'(' ')' 

	LNAME  shift 10
	'('  shift 104
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 107
	dcl_name  goto 106
	dcl_name_list  goto 105
	vardcl  goto 103
	hidden_importsym  goto 11

state 31
	common_dcl:  lconst.constdcl 
	common_dcl:  lconst.'(' constdcl osemi ')' 
	common_dcl:  lconst.'(' constdcl ';' constdcl_list osemi ')' 
	common_dcl:  lconst.'(' ')' 

	LNAME  shift 10
	'('  shift 109
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 107
	dcl_name  goto 106
	dcl_name_list  goto 110
	constdcl  goto 108
	hidden_importsym  goto 11

state 32
	common_dcl:  LTYPE.typedcl 
	common_dcl:  LTYPE.'(' typedcl_list osemi ')' 
	common_dcl:  LTYPE.'(' ')' 

	LNAME  shift 10
	'('  shift 112
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 114
	typedclname  goto 113
	typedcl  goto 111
	hidden_importsym  goto 11

state 33
	xfndcl:  LFUNC.fndcl fnbody 
	fntype:  LFUNC.'(' oarg_type_list_ocomma ')' fnres 

	LNAME  shift 10
	'('  shift 116
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 117
	fndcl  goto 115
	hidden_importsym  goto 11

state 34
	non_dcl_stmt:  simple_stmt.    (268)

	.  reduce 268 (src line 1887)


state 35
	non_dcl_stmt:  for_stmt.    (269)

	.  reduce 269 (src line 1889)


state 36
	non_dcl_stmt:  switch_stmt.    (270)

	.  reduce 270 (src line 1890)


state 37
	non_dcl_stmt:  select_stmt.    (271)

	.  reduce 271 (src line 1891)


state 38
	non_dcl_stmt:  doselect_stmt.    (272)

	.  reduce 272 (src line 1892)


state 39
	non_dcl_stmt:  if_stmt.    (273)

	.  reduce 273 (src line 1893)


state 40
	non_dcl_stmt:  labelname.':' $$274 stmt 

	':'  shift 118
	.  error


state 41
	non_dcl_stmt:  LFALL.    (276)

	.  reduce 276 (src line 1910)


state 42
	non_dcl_stmt:  LBREAK.onew_name 
	onew_name: .    (161)

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  reduce 161 (src line 1223)

	sym  goto 121
	new_name  goto 120
	onew_name  goto 119
	hidden_importsym  goto 11

state 43
	non_dcl_stmt:  LCONTINUE.onew_name 
	onew_name: .    (161)

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  reduce 161 (src line 1223)

	sym  goto 121
	new_name  goto 120
	onew_name  goto 122
	hidden_importsym  goto 11

state 44
	non_dcl_stmt:  LGO.pseudocall 

	LLITERAL  shift 70
	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	'('  shift 69
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 125
	fnliteral  goto 75
	name  goto 71
	pexpr  goto 124
	pexpr_no_paren  goto 68
	pseudocall  goto 123
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 45
	non_dcl_stmt:  LDEFER.pseudocall 

	LLITERAL  shift 70
	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	'('  shift 69
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 125
	fnliteral  goto 75
	name  goto 71
	pexpr  goto 124
	pexpr_no_paren  goto 68
	pseudocall  goto 127
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 46
	non_dcl_stmt:  LGOTO.new_name 

	LNAME  shift 10
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 121
	new_name  goto 128
	hidden_importsym  goto 11

state 47
	non_dcl_stmt:  LRETURN.oexpr_list 
	oexpr_list: .    (305)

	LLITERAL  shift 70
	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LCOMM  shift 67
	'+'  shift 62
	'-'  shift 63
	'^'  shift 66
	'*'  shift 60
	'&'  shift 61
	'('  shift 69
	'!'  shift 64
	'~'  shift 65
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  reduce 305 (src line 2059)

	sym  goto 125
	expr  goto 131
	fnliteral  goto 75
	name  goto 71
	pexpr  goto 59
	pexpr_no_paren  goto 68
	pseudocall  goto 72
	uexpr  goto 57
	expr_list  goto 130
	oexpr_list  goto 129
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 48
	lconst:  LCONST.    (38)

	.  reduce 38 (src line 417)


state 49
	simple_stmt:  expr.    (50)
	simple_stmt:  expr.LASOP expr 
	simple_stmt:  expr.LINC 
	simple_stmt:  expr.LDEC 
	expr:  expr.LOROR expr 
	expr:  expr.LANDAND expr 
	expr:  expr.LEQ expr 
	expr:  expr.LNE expr 
	expr:  expr.LLT expr 
	expr:  expr.LLE expr 
	expr:  expr.LGE expr 
	expr:  expr.LGT expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'|' expr 
	expr:  expr.'^' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.LANDNOT expr 
	expr:  expr.LLSH expr 
	expr:  expr.LRSH expr 
	expr:  expr.LCOMM expr 
	expr_list:  expr.    (289)

	LASOP  shift 132
	LCOLAS  reduce 289 (src line 1994)
	LANDAND  shift 136
	LANDNOT  shift 151
	LCOMM  shift 154
	LDEC  shift 134
	LEQ  shift 137
	LGE  shift 141
	LGT  shift 142
	LINC  shift 133
	LLE  shift 140
	LLSH  shift 152
	LLT  shift 139
	LNE  shift 138
	LOROR  shift 135
	LRSH  shift 153
	'+'  shift 143
	'-'  shift 144
	'|'  shift 145
	'^'  shift 146
	'*'  shift 147
	'/'  shift 148
	'%'  shift 149
	'&'  shift 150
	'='  reduce 289 (src line 1994)
	','  reduce 289 (src line 1994)
	.  reduce 50 (src line 478)


state 50
	simple_stmt:  expr_list.'=' expr_list 
	simple_stmt:  expr_list.LCOLAS expr_list 
	expr_list:  expr_list.',' expr 

	LCOLAS  shift 156
	'='  shift 155
	','  shift 157
	.  error


state 51
	for_stmt:  LFOR.$$75 for_body 
	$$75: .    (75)

	.  reduce 75 (src line 727)

	$$75  goto 158

state 52
	switch_stmt:  LSWITCH.$$89 if_header $$90 LBODY caseblock_list '}' 
	$$89: .    (89)

	.  reduce 89 (src line 822)

	$$89  goto 159

state 53
	select_stmt:  LSELECT.$$92 LBODY caseblock_list '}' 
	$$92: .    (92)

	.  reduce 92 (src line 845)

	$$92  goto 160

state 54
	doselect_stmt:  LDOSELECT.$$96 doselect_hdr $$97 LBODY caseblock_list '}' 
	$$96: .    (96)

	.  reduce 96 (src line 881)

	$$96  goto 161

state 55
	if_stmt:  LIF.$$79 if_header $$80 loop_body $$81 elseif_list else 
	$$79: .    (79)

	.  reduce 79 (src line 756)

	$$79  goto 162

state 56
	labelname:  new_name.    (169)

	.  reduce 169 (src line 1283)


state 57
	expr:  uexpr.    (99)

	.  reduce 99 (src line 909)


state 58
	new_name:  sym.    (159)
	name:  sym.    (168)

	':'  reduce 159 (src line 1207)
	.  reduce 168 (src line 1274)


state 59
	uexpr:  pexpr.    (120)
	pseudocall:  pexpr.'(' ')' 
	pseudocall:  pexpr.'(' expr_or_type_list ocomma ')' 
	pseudocall:  pexpr.'(' expr_or_type_list LDDD ocomma ')' 
	pexpr_no_paren:  pexpr.'.' sym 
	pexpr_no_paren:  pexpr.'.' '(' expr_or_type ')' 
	pexpr_no_paren:  pexpr.'.' '(' LTYPE ')' 
	pexpr_no_paren:  pexpr.'[' expr ']' 
	pexpr_no_paren:  pexpr.'[' oexpr ':' oexpr ']' 
	pexpr_no_paren:  pexpr.'[' oexpr ':' oexpr ':' oexpr ']' 

	'('  shift 163
	'.'  shift 164
	'['  shift 165
	.  reduce 120 (src line 993)


state 60
	uexpr:  '*'.uexpr 

	LLITERAL  shift 70
	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LCOMM  shift 67
	'+'  shift 62
	'-'  shift 63
	'^'  shift 66
	'*'  shift 60
	'&'  shift 61
	'('  shift 69
	'!'  shift 64
	'~'  shift 65
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 125
	fnliteral  goto 75
	name  goto 71
	pexpr  goto 59
	pexpr_no_paren  goto 68
	pseudocall  goto 72
	uexpr  goto 166
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 61
	uexpr:  '&'.uexpr 

	LLITERAL  shift 70
	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LCOMM  shift 67
	'+'  shift 62
	'-'  shift 63
	'^'  shift 66
	'*'  shift 60
	'&'  shift 61
	'('  shift 69
	'!'  shift 64
	'~'  shift 65
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 125
	fnliteral  goto 75
	name  goto 71
	pexpr  goto 59
	pexpr_no_paren  goto 68
	pseudocall  goto 72
	uexpr  goto 167
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 62
	uexpr:  '+'.uexpr 

	LLITERAL  shift 70
	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LCOMM  shift 67
	'+'  shift 62
	'-'  shift 63
	'^'  shift 66
	'*'  shift 60
	'&'  shift 61
	'('  shift 69
	'!'  shift 64
	'~'  shift 65
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 125
	fnliteral  goto 75
	name  goto 71
	pexpr  goto 59
	pexpr_no_paren  goto 68
	pseudocall  goto 72
	uexpr  goto 168
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 63
	uexpr:  '-'.uexpr 

	LLITERAL  shift 70
	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LCOMM  shift 67
	'+'  shift 62
	'-'  shift 63
	'^'  shift 66
	'*'  shift 60
	'&'  shift 61
	'('  shift 69
	'!'  shift 64
	'~'  shift 65
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 125
	fnliteral  goto 75
	name  goto 71
	pexpr  goto 59
	pexpr_no_paren  goto 68
	pseudocall  goto 72
	uexpr  goto 169
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 64
	uexpr:  '!'.uexpr 

	LLITERAL  shift 70
	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LCOMM  shift 67
	'+'  shift 62
	'-'  shift 63
	'^'  shift 66
	'*'  shift 60
	'&'  shift 61
	'('  shift 69
	'!'  shift 64
	'~'  shift 65
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 125
	fnliteral  goto 75
	name  goto 71
	pexpr  goto 59
	pexpr_no_paren  goto 68
	pseudocall  goto 72
	uexpr  goto 170
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 65
	uexpr:  '~'.uexpr 

	LLITERAL  shift 70
	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LCOMM  shift 67
	'+'  shift 62
	'-'  shift 63
	'^'  shift 66
	'*'  shift 60
	'&'  shift 61
	'('  shift 69
	'!'  shift 64
	'~'  shift 65
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 125
	fnliteral  goto 75
	name  goto 71
	pexpr  goto 59
	pexpr_no_paren  goto 68
	pseudocall  goto 72
	uexpr  goto 171
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 66
	uexpr:  '^'.uexpr 

	LLITERAL  shift 70
	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LCOMM  shift 67
	'+'  shift 62
	'-'  shift 63
	'^'  shift 66
	'*'  shift 60
	'&'  shift 61
	'('  shift 69
	'!'  shift 64
	'~'  shift 65
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 125
	fnliteral  goto 75
	name  goto 71
	pexpr  goto 59
	pexpr_no_paren  goto 68
	pseudocall  goto 72
	uexpr  goto 172
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 67
	uexpr:  LCOMM.uexpr 

	LLITERAL  shift 70
	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LCOMM  shift 67
	'+'  shift 62
	'-'  shift 63
	'^'  shift 66
	'*'  shift 60
	'&'  shift 61
	'('  shift 69
	'!'  shift 64
	'~'  shift 65
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 125
	fnliteral  goto 75
	name  goto 71
	pexpr  goto 59
	pexpr_no_paren  goto 68
	pseudocall  goto 72
	uexpr  goto 173
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 68
	pexpr_no_paren:  pexpr_no_paren.'{' start_complit braced_keyval_list '}' 
	pexpr:  pexpr_no_paren.    (152)

	'{'  shift 174
	.  reduce 152 (src line 1170)


state 69
	pexpr_no_paren:  '('.expr_or_type ')' '{' start_complit braced_keyval_list '}' 
	pexpr:  '('.expr_or_type ')' 

	LLITERAL  shift 70
	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LCOMM  shift 182
	'+'  shift 62
	'-'  shift 63
	'^'  shift 66
	'*'  shift 181
	'&'  shift 61
	'('  shift 69
	'!'  shift 64
	'~'  shift 65
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 125
	expr  goto 176
	expr_or_type  goto 175
	fnliteral  goto 75
	name  goto 71
	non_expr_type  goto 177
	pexpr  goto 59
	pexpr_no_paren  goto 68
	pseudocall  goto 72
	uexpr  goto 57
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	recvchantype  goto 178
	othertype  goto 180
	fntype  goto 179
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 70
	pexpr_no_paren:  LLITERAL.    (132)

	.  reduce 132 (src line 1057)


state 71
	pexpr_no_paren:  name.    (133)

	.  reduce 133 (src line 1062)


state 72
	pexpr_no_paren:  pseudocall.    (140)

	.  reduce 140 (src line 1100)


state 73
	pexpr_no_paren:  convtype.'(' expr ocomma ')' 

	'('  shift 183
	.  error


state 74
	pexpr_no_paren:  comptype.lbrace start_complit braced_keyval_list '}' 

	LBODY  shift 185
	'{'  shift 186
	.  error

	lbrace  goto 184

state 75
	pexpr_no_paren:  fnliteral.    (145)

	.  reduce 145 (src line 1127)


state 76
	convtype:  fntype.    (187)
	fnlitdcl:  fntype.    (227)

	'('  reduce 187 (src line 1336)
	.  reduce 227 (src line 1637)


state 77
	convtype:  othertype.    (188)
	comptype:  othertype.    (189)

	'('  reduce 188 (src line 1338)
	.  reduce 189 (src line 1340)


state 78
	fnliteral:  fnlitdcl.lbrace stmt_list '}' 
	fnliteral:  fnlitdcl.error 

	error  shift 188
	LBODY  shift 185
	'{'  shift 186
	.  error

	lbrace  goto 187

state 79
	othertype:  '['.oexpr ']' ntype 
	othertype:  '['.LDDD ']' ntype 
	oexpr: .    (303)

	LLITERAL  shift 70
	LCHAN  shift 80
	LDDD  shift 190
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LCOMM  shift 67
	'+'  shift 62
	'-'  shift 63
	'^'  shift 66
	'*'  shift 60
	'&'  shift 61
	'('  shift 69
	'!'  shift 64
	'~'  shift 65
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  reduce 303 (src line 2053)

	sym  goto 125
	expr  goto 191
	fnliteral  goto 75
	name  goto 71
	oexpr  goto 189
	pexpr  goto 59
	pexpr_no_paren  goto 68
	pseudocall  goto 72
	uexpr  goto 57
	convtype  goto 73
	comptype  goto 74
	interfacetype  goto 83
	structtype  goto 82
	othertype  goto 77
	fntype  goto 76
	hidden_importsym  goto 11
	fnlitdcl  goto 78

state 80
	othertype:  LCHAN.non_recvchantype 
	othertype:  LCHAN.LCOMM ntype 
	othertype:  LCHAN.implinterfacetype 
	othertype:  LCHAN.LCOMM implinterfacetype 

	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LBODY  shift 185
	LCOMM  shift 193
	'*'  shift 201
	'('  shift 199
	'{'  shift 186
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	.  error

	lbrace  goto 200
	sym  goto 125
	dotname  goto 198
	name  goto 202
	interfacetype  goto 83
	structtype  goto 82
	ptrtype  goto 197
	implinterfacetype  goto 194
	non_recvchantype  goto 192
	othertype  goto 196
	fntype  goto 195
	hidden_importsym  goto 11

state 81
	othertype:  LMAP.'[' ntype ']' ntype 

	'['  shift 203
	.  error


state 82
	othertype:  structtype.    (204)

	.  reduce 204 (src line 1398)


state 83
	othertype:  interfacetype.    (205)

	.  reduce 205 (src line 1399)


state 84
	structtype:  LSTRUCT.lbrace structdcl_list osemi '}' 
	structtype:  LSTRUCT.lbrace '}' 

	LBODY  shift 185
	'{'  shift 186
	.  error

	lbrace  goto 204

state 85
	interfacetype:  LINTERFACE.lbrace interfacedcl_list osemi '}' 
	interfacetype:  LINTERFACE.lbrace '}' 

	LBODY  shift 185
	'{'  shift 186
	.  error

	lbrace  goto 205

state 86
	imports:  imports import ';'.    (7)

	.  reduce 7 (src line 229)


state 87
	import:  LIMPORT import_stmt.    (8)

	.  reduce 8 (src line 231)


state 88
	import:  LIMPORT '('.import_stmt_list osemi ')' 
	import:  LIMPORT '('.')' 

	LLITERAL  shift 90
	LNAME  shift 10
	')'  shift 207
	'.'  shift 92
	'?'  shift 12
	'@'  shift 13
	.  error

	import_here  goto 89
	sym  goto 91
	hidden_importsym  goto 11
	import_stmt  goto 208
	import_stmt_list  goto 206

state 89
	import_stmt:  import_here.import_package import_there 
	import_stmt:  import_here.import_there 
	$$21: .    (21)

	LPACKAGE  shift 7
	.  reduce 21 (src line 335)

	import_package  goto 209
	import_there  goto 210
	$$21  goto 15

state 90
	import_here:  LLITERAL.    (15)

	.  reduce 15 (src line 287)


state 91
	import_here:  sym.LLITERAL 

	LLITERAL  shift 211
	.  error


state 92
	import_here:  '.'.LLITERAL 

	LLITERAL  shift 212
	.  error


state 93
	hidden_importsym:  '@' LLITERAL '.'.LNAME 
	hidden_importsym:  '@' LLITERAL '.'.'?' 

	LNAME  shift 213
	'?'  shift 214
	.  error


state 94
	import_there:  $$21 hidden_import_list '$'.'$' 

	'$'  shift 215
	.  error


state 95
	hidden_import_list:  hidden_import_list hidden_import.    (358)

	.  reduce 358 (src line 2364)


state 96
	hidden_import:  LIMPORT.LNAME LLITERAL ';' 

	LNAME  shift 216
	.  error


state 97
	hidden_import:  LVAR.hidden_pkg_importsym hidden_type ';' 

	'@'  shift 13
	.  error

	hidden_importsym  goto 218
	hidden_pkg_importsym  goto 217

state 98
	hidden_import:  LCONST.hidden_pkg_importsym '=' hidden_constant ';' 
	hidden_import:  LCONST.hidden_pkg_importsym hidden_type '=' hidden_constant ';' 

	'@'  shift 13
	.  error

	hidden_importsym  goto 218
	hidden_pkg_importsym  goto 219

state 99
	hidden_import:  LTYPE.hidden_pkgtype hidden_type ';' 

	'@'  shift 13
	.  error

	hidden_importsym  goto 218
	hidden_pkg_importsym  goto 221
	hidden_pkgtype  goto 220

state 100
	hidden_import:  LFUNC.hidden_fndcl fnbody ';' 

	'('  shift 224
	'@'  shift 13
	.  error

	hidden_fndcl  goto 222
	hidden_importsym  goto 218
	hidden_pkg_importsym  goto 223

state 101
	import_package:  LPACKAGE LNAME import_safety ';'.    (18)

	.  reduce 18 (src line 310)


state 102
	xdcl_list:  xdcl_list xdcl ';'.    (231)

	.  reduce 231 (src line 1664)


state 103
	common_dcl:  LVAR vardcl.    (28)

	.  reduce 28 (src line 368)


state 104
	common_dcl:  LVAR '('.vardcl_list osemi ')' 
	common_dcl:  LVAR '('.')' 

	LNAME  shift 10
	')'  shift 226
	'?'  shift 12
	'@'  shift 13
	.  error

	sym  goto 107
	dcl_name  goto 106
	dcl_name_list  goto 105
	vardcl  goto 227
	vardcl_list  goto 225
	hidden_importsym  goto 11

state 105
	vardcl:  dcl_name_list.ntype 
	vardcl:  dcl_name_list.ntype '=' expr_list 
	vardcl:  dcl_name_list.'=' expr_list 
	dcl_name_list:  dcl_name_list.',' dcl_name 

	LCHAN  shift 80
	LFUNC  shift 126
	LINTERFACE  shift 85
	LMAP  shift 81
	LNAME  shift 10
	LSTRUCT  shift 84
	LCOMM  shift 237
	'*'  shift 201
	'('  shift 236
	'='  shift 229
	'['  shift 79
	'?'  shift 12
	'@'  shift 13
	','  shift 230
	.  error

	sym  goto 125
	ntype  goto 228
	dotname  goto 235
	name  goto 202
	interfacetype  goto 83
	structtype  goto 82
	ptrtype  goto 234
	recvchantype  goto 231
	othertype  goto 233
	fntype  goto 232
	hidden_importsym  goto 11

state 106
	dcl_name_list:  dcl_name.    (287)

	.  reduce 287 (src line 1984)


state 107
	dcl_name:  sym.    (160)

	.  reduce 160 (src line 1217)


state 108
	common_dcl:  lconst constdcl.    (31)

	.  reduce 31 (src line 381)


state 109
	common_dcl:  lconst '('.constdcl osemi ')' 
	common_dcl:  lconst '('.constdcl ';' constdcl_list osemi ')' 
	common_dcl:  lconst '('.')' 
